# monitorizador_novedades_el_corte_ingles

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: main.rs
src/ajustes_iniciales/: cliente_http.rs  conexion.rs  configuracion.rs  mod.rs  preparar_ejecucion.rs
src/monitorizador/: buscar.rs  comprobar.rs  crear.rs  mod.rs  modelos.rs  notificar.rs
src/utilidades/: mod.rs  rutas.rs
